--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -30,6 +30,10 @@ jobs:
     - name: Get GKE credentials
       run: gcloud container clusters get-credentials cluster-1 --zone us-central1-c 
 
+    - name: Install Helm chart
+      run: |
+        helm install apache2 ./apache --set repository.image=aynurose/python-app --set repository.tag=2.0.0
+        
 
 
 
