--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -1,7 +1,16 @@
 name: Deploy to GKE
 on:
-  push:
-    branches: ["main"]
+  workflow_dispatch:
+    inputs:
+      docker_image:
+        description: 'Provide image repo'
+        required: true
+        default: ''
+      image_tag:
+        description: 'Provide image tag'
+        required: true
+        default: '' 
+
 
 
 jobs:
@@ -32,8 +41,8 @@ jobs:
 
     - name: Install Helm chart
       run: |
-        helm install apache2 ./apache --set repository.image=aynurose/python-app --set repository.tag=2.0.0
-        
+        helm install apache2 ./apache --set repository.image=${{ secrets.docker_image }} --set repository.tag=${{ secrets.image_tag }}
+
 
 
 
