--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Install Helm chart
       run: |
-        helm install apache2 ./apache --set repository.image=${{ secrets.docker_image }} --set repository.tag=${{ secrets.image_tag }}
+        helm install apache2 ./apache --set repository.image=${{ inputs.docker_image }} --set repository.tag=${{ inputs.image_tag }}
 
 
 
